# contextual-pii-tagger

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
data/: comparison-report.txt  test.jsonl  train.jsonl  validation.jsonl
doc/: DEVELOPMENT.md  lora-fine-tuning.md  pii-tiers.md
doc/architecture/: data-generation-pipeline.md  index.md  (+6 more)
rust/: Cargo.toml
rust/src/: entities.rs  main.rs  payload.rs  scan.rs  tier1.rs
rust/src/tier2/: inference.rs  mod.rs  parser.rs  prompt.rs
scripts/: compare-lora-vs-xgboost.sh  evaluate.sh  generate-training-data.sh  train-lora.sh  train-xgboost.sh
specifications/: data-generation.md  detection-interface.md  entities.md  evaluation.md  hook-script.md  index.md  output-parser.md  rust-binary.md  training.md
tasks/: index.md  t01-entities.md  t02-example.md  t03-output-parser.md  t05-prompt-assembly.md  t06-detector.md  t09-templates.md  t10-llm-generation.md  t11-auto-labeling.md  t12-hard-negatives.md  t13-dataset-io.md  t14-generate-pipeline.md  t15-training-format.md  t16-training-loop.md  t17-merge-adapter.md  t19-metrics.md  t20-xgboost-baseline.md  t21-evaluate-pipeline.md  t22-package-init.md  t23-template-files.md  t24-training-config.md
test/: test_baseline.py  test_cli_utils.py  test_dataset_io.py  test_detector.py  test_entities.py  test_evaluate_pipeline.py  test_example.py  test_generate_pipeline.py  test_hard_negatives.py  test_hook_scan.py  test_human_review.py  test_llm_generate.py  test_merge.py  test_metrics.py  test_output_parser.py  test_prompt.py  test_public_api.py  test_raw_example.py  test_template_yaml_files.py  test_templates.py  test_training_format.py  test_training_loop.py  test_validate_labels.py
(+43 files in other folders)
