[package]
name = "pii-scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pii-scanner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex-lite = "0.1"
dirs = "6"

# Heavy native dependencies — gated behind features for incremental development.
# Enable with: cargo build --features tier1,tier2
# Using redact-core (not redact-ner) for pattern-based detection only.
# This avoids the ONNX Runtime dependency while covering emails, phones,
# SSNs, credit cards, and 30+ other pattern-based entity types.
redact-core = { version = "0.7", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }
tokenizers = { version = "0.22", optional = true }

[features]
default = []
tier1 = ["dep:redact-core"]
tier2 = ["dep:llama-cpp-2", "dep:tokenizers"]
full = ["tier1", "tier2"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
